:bug: Fix overflow-y

--- a/app/Components/Nav/page.module.css
+++ b/app/Components/Nav/page.module.css
@@ -13,6 +13,7 @@
 
 .nav_list {
   font-size: var(--22px);
+  overflow-y: auto;
 }
 
 .nav_categories {
